# streamlit_file_processor

./: pyproject.toml  requirements.txt  streamlit_app.py
